fix: fix search history to overlap

--- a/src/scss/pages/_search.scss
+++ b/src/scss/pages/_search.scss
@@ -106,9 +106,9 @@
 }
 
 .search-history-container {
-  //position: absolute;
-  //top: 5rem;
-  //z-index: 10;
+  position: absolute;
+  top: 5rem;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   height: auto;
